Finish first try, decode is not working

--- a/MorseEncoderAndDecoder/src/app/encode-page/encode-page.component.html
+++ b/MorseEncoderAndDecoder/src/app/encode-page/encode-page.component.html
@@ -1,1 +1,10 @@
-<p>encode-page works!</p>
+<form action="javascript:void(0)" (submit)="onSubmit()">
+  <label>
+    <h1>Enter string to encode.</h1>
+    <input type="text" name="str" [(ngModel)]="inputValue">
+  </label>
+  <button>OK</button>
+</form>
+
+<p>{{output()}}</p>
+<p class="error-message">{{errorMessage()}}</p>
