--- a/MorseEncoderAndDecoder/src/app/decode-page/decode-page.component.html
+++ b/MorseEncoderAndDecoder/src/app/decode-page/decode-page.component.html
@@ -1,1 +1,10 @@
-<p>decode-page works!</p>
+<form action="javascript:void(0)" (submit)="onSubmit()">
+  <label>
+    <h1>Enter morse code string to decode.</h1>
+    <input type="text" name="inp" [(ngModel)]="inputValue">
+  </label>
+  <button>OK</button>
+</form>
+
+<p>{{output()}}</p>
+<p class="error-message">{{errorMessage()}}</p>
