--- a/MorseEncoderAndDecoder/src/app/decode-page/decode-page.component.html
+++ b/MorseEncoderAndDecoder/src/app/decode-page/decode-page.component.html
@@ -3,8 +3,8 @@
     <h1>Enter morse code string to decode.</h1>
     <input type="text" name="inp" [(ngModel)]="inputValue">
   </label>
-  <button>OK</button>
+  <button [disabled]="isButtonDisabled()">OK</button>
 </form>
 
-<p>{{output()}}</p>
-<p class="error-message">{{errorMessage()}}</p>
+<input readonly [value]="output()">
+<p class="error-message">{{ errorMessage() }}</p>
