--- a/MorseEncoderAndDecoder/src/app/app.component.html
+++ b/MorseEncoderAndDecoder/src/app/app.component.html
@@ -1,2 +1,7 @@
 <app-morse-header />
-<router-outlet />
+
+<div class="outer-wrapper">
+  <div class="wrapper">
+    <router-outlet />
+  </div>
+</div>
