Add morse code sounds

--- a/MorseEncoderAndDecoder/src/app/decode-page/decode-page.component.html
+++ b/MorseEncoderAndDecoder/src/app/decode-page/decode-page.component.html
@@ -1,5 +1,5 @@
 <main>
-  <form action="javascript:void(0)" (submit)="onSubmit()">
+  <form (submit)="onSubmit()">
     <label>
       <h1>Enter morse code string to decode.</h1>
       <input type="text" name="inp" [(ngModel)]="inputValue">
