--- a/MorseEncoderAndDecoder/src/app/encode-page/encode-page.component.html
+++ b/MorseEncoderAndDecoder/src/app/encode-page/encode-page.component.html
@@ -1,5 +1,5 @@
 <main>
-  <form action="javascript:void(0)" (submit)="onSubmit()">
+  <form  (submit)="onSubmit()">
     <label>
       <h1>Enter string to encode.</h1>
       <input type="text" name="str" [(ngModel)]="inputValue">
